Fixed: all listing page dropdown toggle issue (#544)
* Fixed: all listing page dropdown toggle issue

* Commit: changes

* Fixed: select2 issue in overlaped search

--- a/assets/css/public-main.rtl.css
+++ b/assets/css/public-main.rtl.css
@@ -5138,7 +5138,7 @@ body.atbd_content_active #directorist.atbd_wrapper .plasmaSliderIcon.psi-angle-l
   text-decoration: none;
 }
 
-.select2-container {
+.select2-container.select2-container--open {
   z-index: 99999;
 }
 
