--- a/assets/src/scss/component/_general.scss
+++ b/assets/src/scss/component/_general.scss
@@ -184,6 +184,6 @@
   }
 }
 
-.select2-container{
+.select2-container.select2-container--open{
   z-index: 99999;
 }
